# JMC-TruthLens

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/utils/: claim_detector.py
backend/core/: db.py  fact.py  fallacies_and_bias.py  preprocessors.py  tasks.py
backend/schemas/: __init__.py  schemas.py
dashboard/: app.py  pyproject.toml
frontend/: IMPROVEMENTS.md  LOADING_UX_README.md  manifest.json  package.json  tsconfig.json
frontend/css/: content.css  index.css
frontend/js/: background.js  content.js  popup.js
frontend/src/: background.ts  content.ts  popup.ts
frontend/types/: chrome.d.ts  truthlens.d.ts
website/: COMPONENT_ARCHITECTURE.md  NOTIFICATIONS.md  README.md  package-lock.json  package.json
website/src/components/: ErrorBoundary.tsx  FactCheckErrorFallback.tsx  VerificationHistory.tsx
website/src/features/components/: ChatHeader.tsx  ChatInput.tsx  ChatMessages.tsx  ChatSidebar.tsx  FactCheckForm.tsx  FactCheckResult.tsx  FloatingActions.tsx  LoadingScreen.tsx  MessageBubble.tsx  WelcomeScreen.tsx  index.ts
website/src/features/fact-check/: index.ts
website/src/hooks/: useChat.ts  useFactCheck.ts  useFactCheckWithNotifications.ts  useNotification.ts
website/src/pages/: 404.tsx  _app.tsx  _document.tsx  index.tsx
website/src/pages/api/: fact-check.ts
website/src/styles/: globals.css
website/src/types/: index.ts
(+7 files in other folders)
